<resources>
    <string name="app_name">Экотропа</string>
    <string name="title_activity_maps">Map</string>
    <string name="title1">Экотропа \n\"Легенды Старой Пустыни\"</string>
    <string name="start">Начать маршрут</string>
    <string name="onMap">Точки на карте</string>
    <string name="list">Точки списком</string>
    <string name="obj0">Предположительное время прохождения тропы «Легенды Старой Пустыни», протяженностью 6 километров, час-полтора. Тропа квалифицируется как легкая, без перепадов высот. На маршруте отмечено 12 пунктов – это места обитания или произрастания наиболее любопытных объектов. Эта местность богата как старинными, так и современными легендами. Во время прохождения тропы просим бережно относится к окружающей природе, не срывать растения, не оставлять в лесу мусор, не включать громкую музыку (это является стрессовым фактором для птиц, особенно в период гнездования) и не разводить костры.</string>
    <string name="obj1">Первой остановкой является место обитание ежа. Его можно встретить в сумерки в летний период. Существует стереотип, что ежи переносят на иголках яблоки для питания. Это заблуждение. Обыкновенный ёж является всеядным животным. Он питается взрослыми насекомыми, в том числе вредными (майский жук, волосатая жужелица, гусеница монашенка, непарный шелкопряд), гусеницами, слизнями, дождевыми червями, мышами. Также фруктами и ягодами. Может полакомиться яйцами и птенцами мелких птиц, гнезда которых расположены на земле. Его иголки предназначены для защиты от хищников, а не для переноса фруктов.</string>
    <string name="obj2">Не далеко от биостанции расположена поляна «Капустник», на которой можно встретить много интересных растений, в том числе Лабазник (Таволга) Вязолистный. Цветет продолжительное время, с конца июня. Имеет ярко выраженный сладкий аромат. Хороший медонос. Растение издавна применяется в народной медицине. Таволга является общепризнанным лекарственным растением, у которой используются все части растения — траву, цветки и корни.</string>
    <string name="obj3">Следующее растение вы легко обнаружите по его цветкам. Это дербейник иволистный. Народное название – плакун-трава – связано с интересной особенностью дербенника. Во влажную, а также теплую и сухую погоду с его листьев стекают капли воды, похожие на слезы. Дело в том, что на обратной стороне листа дербенника расположены устьица, через которые растение удаляет излишки влаги. С этими «слезками» связана и легенда, согласно которой травка выросла там, где падали слезы Богородицы, оплакивавшей распятого Христа. Якобы и по сию пору плачет о нем дербенник.</string>
    <string name="obj4">На выходе из леса нужно быть внимательнее что бы не пропустить небольшое растение – Истод обыкновенный. Стеблей много, они разветвленные или простые, почти голые. Высота растения 15–30 см. Цветки пятилепестковые, синие, реже розоватые, собраны в редкие кисти. Период цветения – июнь-июль, плоды созревают в июле-августе. Издревле считалось, что домашний скот даст больше молока, если будет кушать траву с добавлением истода. Греческое название растения указывает на эту его особенность, так слово «πολύς» переводится как «много», а «γάλα» — как «молоко».</string>
    <string name="obj5">Далее следуем по мосту и переходим на другой берег протоки. Тут вы можете увидеть мое любимое растение. Ирис желтый в дикой природе, как правило, растет в поймах рек, по берегам водоемов. Семена ириса, попав в воду, не тонут в течение длительного времени. Причины их высокой плавучести кроются в несмачиваемости их кожуры и наличии воздухоносных полостей между кожурой и эндоспермом семени. Цветет в мае-июне в течение 2-3 недель. У древних славян ирис связан с именем богагромовержца Перуна и назывался перуникой. По преданию эти цветы растут в тех местах, куда Перун ударял молнией.</string>
    <string name="obj6">Для того, что бы обнаружить «логово» личинки муравьиного льва необходимо выйти на песчаный пляж. Если внимательно рассмотреть песок на истоптанном участке пляжа, то можно обнаружить лунки глубиной до 1 см. На дне их скрывается хищник, который питается муравьями. Вы можете попробовать выманить «льва» осторожно осыпая песчинки по краю воронки. Муравьиный лев решит, что это добыча и покажет свои челюсти. Взрослый муравьиный лев - невзрачное крылатое насекомое. Он питается нектаром цветов или вообще не питается.</string>
    <string name="obj7">Продвигаясь по берегу озера Свято можно встретить герань лесную. Герань лесная не часто встречается в городе, однако хорошо заметна при цветении. Листья у герани пальчатораздельные. Стебель и листья покрыты волосками с железками. Цветет герань с июня по сентябрь. Цветки одиночные, крупные, цвет от лилово-красного до синего, с 5 лепестками, расположены на длинных цветоножках. С древнегреческого, название герань, дословно переводится как «журавельник». По легенде, растение впервые так назвал Диоскорид еще в I в.н.э. за то, что контур плодов растения напоминал клюв журавля.</string>
    <string name="obj8">Отклонившись от уреза воды в лес мы можем встретить яркого представителя царства Грибов - Биспореллу Лимонную. Во второй половине лета, обычно ближе к концу августа, колонии этого гриба, состоящие из десятков, а порой сотен, скученных круглых плодовых тел, ярко-жёлтыми пятнами покрывают гниющие стволы берёз и осин. Биспорелла лимонная имеет одну интересную особенность – в жаркую сухую погоду плодовые тела чернеют и сморщиваются, но как только пройдет дождь, они расправляются и принимают свой первоначальный вид.</string>
    <string name="obj9">Следующий объект является водным растением. С июня по сентябрь кубышка желтая приносит одиночные верхушечные цветки ярко-желтого цвета до 6 см в диаметре. Чашечка бутона состоит из 5-6 чашелистиков и многочисленных обратно-сердцевидных лепестков до 15-20 штук. В центре расположены продолговато-линейные желтые пыльники. В августе и сентябре растение дает гладкие конические плоды с многочисленными семенами, созревающие непосредственно на поверхности воды. Кубышка желтая относятся к древнейшим растениям нашей планеты, поскольку появились около 30 млн. лет тому назад. Некоторые авторы название растения связывают с формой плода, напоминающей маленький кургузый кувшинчик – кубышку.</string>
    <string name="obj10">Так же в воде произрастает еще одно интересное растение. Телорез обыкновенный, телорез алоэвидный или водяной солдат – многолетнее водное растение, свободно плавающее летом и погруженное в воду зимой. Телорез иногда называют «ананасовым растением», его легко узнать по длинным, похожим на меч, листьям с изогнутыми колючками, выходящим из центральной розетки. Вид становится плавучим летом во время цветения, потому что новые листочки содержат воздушные карманы, но, когда взрослеют, они становятся заболоченными, и осенью телорез опускается под воду. Острые, зазубренные края листьев легко режут пловцов и людей, которые занимаются этими водными растениями. Будьте аккуратны!</string>
    <string name="obj11">Пустынский заказник является местом произрастания реликтовых видов. Таких, как чилим, тонконог сизый и другие. Тонконог сизый как правило, растёт в разреженных сосновых лесах, на слабозадернованных песках, по обочинам дорог, песчаным берегам озёр и рек. Это растение редко встречается в дикой природе и даже занесено в Красную книгу нескольких регионов РФ. Но является культивируемым и садоводы любят украшать им альпийские горки</string>
    <string name="obj12">Заключительная остановка на маршруте посвящена крупному красивому растению коровяк мучнистый. Все зелёные части соцветия обильно опушены мелкими волосками, отчего кажется, что они присыпаны мукой. Коровяк – одно из немногих растений, посвященное скандинавскому богу огня и озорства Локи. Как правило, растения Локи обладают довольно яркими и необычными качествами, и коровяк – не исключение. Одно из названий этого растения – ведьмина свеча, и в связи с мощной энергетикой стихии Огня образ свечи во тьме тут приходится как нельзя кстати. Ведьминой свечей его назвали так как из сухих веток коровяка получался прекрасный трут, который хорошо горел и, до введения в обиход хлопка, использовался в качестве фитилей для ламп. Маршрут завершается на остановке общественного транспорта.Тропа будет интересна к посещению не один раз. В разные сезоны года она будет выглядеть по-новому. Ведь в процессе вегетационного развития растения меняют свой облик.</string>
    <string name="obj1_1">Маршрут проходит через биостанцию ННГУ им. Лобачевского. Здесь студенты летом проходят полевую практику. Биостанция была основана в 1933 году. Выбор места для биостанции был обусловлен возможностью увидеть на ограниченной территории все типы ландшафта Нижегородского Поволжья. Биостанция расположена на берегу озера Великое. От биостанции маршрут проходит вдоль протоки до озера Свято. </string>
    <string name="obj3_1">Продвигаясь дальше, вдоль протоки мы доходим до карстового разлома, который называется «Пещера Желаний». С эти местом связано много преданий, имеющих хождение среди студентов. Одной из них связано с исполнением желаний. Если загадать желание, написать его на листочки и оставить в расщелине, то оно обязательно сбудется. Чаще всего в этой пещере оставляют записки с надеждой сдать зачет по ботанике или зоологии. На отвесных каменистых склонах произрастает мох маршанция.</string>
    <string name="obj8_1">Маршрут огибает удивительное и таинственное озеро Свято, отличающееся от всех Пустынских озёр глубиной и цветом воды. Оно хранит много тайн, в том числе и довольно пугающие. Поскольку в озере без причастия и отпевания было погребено много людей, озеро закономерно стало «нечистым местом». Дело в том, что убитые, утопленники, опойцы и самоубийцы всегда считались очень опасными мертвецами – так называемыми «заложными покойниками» - такие мертвецы могут не упокоиться вовсе, приходить к живым, вредить им, изводить насмерть и пр. Поэтому озеро пришлось освятить. Приглашённый священник пускал на озеро крест, читая молитвы. И в одном из заливов озера крест не погрузился в воду, а поплыл по ней хоть и был металлический. Тогда священник сказал: «Это не грешное озеро, а святое…» Так оно и стало называться и почитаться. </string>
    <string name="obj11_1">Наш маршрут выходит на финишную прямую. Следующая часть будет пролегать вдоль асфальтированной дороги. Просим соблюдать правила дорожного движения. Во время передвижения по трассе есть возможность ознакомиться с историей этой местности. Название «Пустынь» означает, что в этих местах не было (на момент основания деревни) поселений людей, а затем и возникли «пустынки» - обители отшельников-раскольников. Деревня Пустынь возникла в XVII веке и была связана с Девориным женским монастырём, от которого сейчас сохранилось урочище Деворино к югу-востоку от Старой Пустыни. Монастырь был основан в конце XVII века Авдотьей Петровной Нарышкиной, постриженной под именем Деворы . Как говорят, «раскольницей она была. Сослали её сюда триста лет назад. …И стал тут раскольничий скит. На этом месте потом появилось село, жили в котором старообрядцы. Назвали его Пустынь: место-то пустынное, глухое было». Другая легенда повествует, что жили здесь на месте Пустыни и монастыря «старые люди монашки». И приплыла к ним как-то раз сюда Богородица по реке, верхом на камушке. Это была икона Богородицы, хотя для молящихся здесь это было одно и то же. Монашки отправляли несколько раз её назад, но Богородица приплывала снова. Так, специально для этой чудной иконы построили здесь церковь, а затем и деревню – Пустынь. А затем и люди стали на святое это место приходить и селиться.</string>
    <string name="nextPoint">Следующая точка</string>
    <string name="toMap">На карту</string>
    <string name="previousPoint">Предыдущая точка</string>
    <string name="toMainMenu">В главное меню</string>
    <string name="nobj1">Ёж обыкновенный</string>
    <string name="nobj2">Лабазник (Таволга) Вязолистный</string>
    <string name="nobj3">Дербейник иволистный</string>
</resources>