<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".MenuScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_height="300dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:textSize="30sp"
            android:background="@color/green"
            android:gravity="center"
            android:onClick="start"
            android:text="@string/start"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"

            android:background="@color/black"/>
        <TextView
            android:layout_weight="1"
            android:layout_height="300dp"
            android:layout_width="match_parent"
            android:onClick="toMap"
            android:textSize="30sp"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/onMap"
            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"/>

        <TextView
            android:layout_weight="1"
            android:layout_height="300dp"
            android:onClick="toList"
            android:layout_width="match_parent"
            android:textSize="30sp"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/list"
            />
    </LinearLayout>
</FrameLayout>